@@ -108,6 +108,7 @@ var localized_strings,
             badges_all: "All Badges",
 			games_all: "All Games",
 			games_discount: "Games With Discounts",
+			games_installed: "Installed Games",
             badges_drops: "Badges With Card Drops Remaining",
 			binder_view: "Binder View",
             sales_total: "Sales total",
